@@ -1,3 +1,10 @@
+2009-05-24  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	(slime-goto-location-position): Only go to match-beginning if
+	search succeeded.
+
+	Patch by Madhu.
+
 2009-05-23  Helmut Eller  <heller@common-lisp.net>
 
 	* swank-openmcl.lisp (break-in-sldb): Honor *break-on-signals*.
